# AuraData

./: .dockerignore  .gitignore  AuraData_Features.md  Dockerfile  README.md  agent.py  app.py  baseline.py  experiment_runner.py  main.py  mock_data.py  observability.py  pyproject.toml  requirements.txt  test_governance.py
src/: anomaly_detector.py
