[project]
name = "auradata"
version = "0.1.0"
description = "Autonomous Data Refinement Engine"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.3",
    "langchain-anthropic>=1.4.0",
    "langchain-aws>=1.4.3",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.26",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.6",
    "pandas>=3.0.2",
    "pydantic>=2.12.5",
    "sqlalchemy>=2.0.49",
    "streamlit>=1.56.0",
    "uvicorn>=0.43.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
